--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -28,5 +28,11 @@
             <artifactId>jasperreports</artifactId>
             <version>6.21.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
     </dependencies>
 </project>
